example/compilation/errors/semantic/func_proc/argument/array.arn


type date : struct  {
    jour : int;
    mois : int;
    annee : float;
} fstruct;

type personne : struct  {
    numero : int;
    naissance : date;
    age : int;
    taille : float;
} fstruct;

type equipe : array[1:3, 1:2] of personne;
var p : equipe;

func main(a:int, b:float) -> int {
    return 0;
}

main(p[0, 1].naissance.jour, 2.0);

// Error
main(p[0, 1].naissance.annee, 2.0); // Error: expected int, found float
main(p[0, 1].e.mois, 2.0);          // Error: expected int, field e not found in personne
main(p[0, 1], 2.0);                 // Error: expected int, found array[1:3, 1:2] of personne